--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -25,17 +25,44 @@
     {% endif %}
     <main class="flex-grow-1">
       <div class="container-lg mt-3">
-        <h1></h1>
-        <div class="row">
-          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
-            <h1 class="display-3">Анализатор страниц</h1>
-            <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
-            <form action="/urls " method="post" class="d-flex justify-content-center">
-              <label for="text" class="visually-hidden">Url для проверки</label>
-              <input type="text" name="url" placeholder="https://www.example.com" value='{{ url }}' class="form-control form-control-lg" required>
-              <input type="submit" class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
-            </form>
-          </div>
+        <h1 class="text-break">Сайт: {{ url.name }}</h1>    
+        <div class="table-responsive">
+          <table class="table table-bordered table-hover text-nowrap" data-test="url">
+            <tbody>
+              <tr>
+                <td>ID</td>
+                <td>{{ url.id }}</td>
+              </tr>
+              <tr>
+                <td>Имя</td>
+                <td>{{ url.name }}</td>
+              </tr>
+              <tr>
+                <td>Дата создания</td>
+                <td>{{  url.created_at }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <h2 class="mt-5 mb-3">Проверки</h2>
+        <form method="post" action="/urls/1/checks">
+          <input type="submit" class="btn btn-primary" value="Запустить проверку">
+        </form>
+        <div>
+          <table class="table table-bordered table-hover mt-2" data-test="checks">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Код ответа</th>
+                <th>h1</th>
+                <th>title</th>
+                <th>description</th>
+                <th>Дата создания</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         </div>
       </div>
     </main>
