Add url checking interface

--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -37,7 +37,7 @@
                 <td>{{ url.id }}</td>
                 <td>
                   <a href = "{{ url_for('urls_show', id=url.id) }}">{{ url.name }}</a></td>
-                <td></td>
+                <td>{{ url.last_check }}</td>
                 <td></td>
               </tr>
               {% endfor %}
