--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -45,12 +45,12 @@
           </table>
         </div>
         <h2 class="mt-5 mb-3">Проверки</h2>
-        <form method="post" action="/urls/1/checks">
+        <form method="post" action="{{ url_for('create_check', id=url.id) }}">
           <input type="submit" class="btn btn-primary" value="Запустить проверку">
         </form>
         <div>
           <table class="table table-bordered table-hover mt-2" data-test="checks">
-            <thead>
+            <tbody>
               <tr>
                 <th>ID</th>
                 <th>Код ответа</th>
@@ -59,8 +59,18 @@
                 <th>description</th>
                 <th>Дата создания</th>
               </tr>
-            </thead>
-            <tbody>
+              {% if checks %}
+                {% for check in checks%}
+                  <tr>
+                    <td>{{check.id}}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>{{ check.created_at }}</td>
+                  </tr>
+                {% endfor %}
+              {% endif %}
             </tbody>
           </table>
         </div>
