--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -1,87 +1,57 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Анализатор страниц</title>
-  </head>
-  <body class="min-vh-100 d-flex flex-column">
-    <header class="flex-shrink-0">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-        <a class="navbar-brand" href="/">Анализатор страниц</a>
-        <div id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link " href="/urls">Сайты</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    {% if messages %}
-      {% for category, message in messages%}
-        <div class="alert {{ category }}" role="alert">{{ message }}</div>
-      {% endfor %}
-    {% endif %}
-    <main class="flex-grow-1">
-      <div class="container-lg mt-3">
-        <h1 class="text-break">Сайт: {{ url.name }}</h1>    
-        <div class="table-responsive">
-          <table class="table table-bordered table-hover text-nowrap" data-test="url">
-            <tbody>
-              <tr>
-                <td>ID</td>
-                <td>{{ url.id }}</td>
-              </tr>
-              <tr>
-                <td>Имя</td>
-                <td>{{ url.name }}</td>
-              </tr>
-              <tr>
-                <td>Дата создания</td>
-                <td>{{  url.created_at }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <h2 class="mt-5 mb-3">Проверки</h2>
-        <form method="post" action="{{ url_for('create_check', id=url.id) }}">
-          <input type="submit" class="btn btn-primary" value="Запустить проверку">
-        </form>
-        <div>
-          <table class="table table-bordered table-hover mt-2" data-test="checks">
-            <tbody>
-              <tr>
-                <th>ID</th>
-                <th>Код ответа</th>
-                <th>h1</th>
-                <th>title</th>
-                <th>description</th>
-                <th>Дата создания</th>
-              </tr>
-              {% if checks %}
-                {% for check in checks%}
-                  <tr>
-                    <td>{{check.id}}</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>{{ check.created_at }}</td>
-                  </tr>
-                {% endfor %}
-              {% endif %}
-            </tbody>
-          </table>
-        </div>
+{% extends 'layout.html' %}
+ 
+{% block content %}
+  <main class="flex-grow-1">
+    <div class="container-lg mt-3">
+      <h1 class="text-break">Сайт: {{ url.name }}</h1>    
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover text-nowrap" data-test="url">
+          <tbody>
+            <tr>
+              <td>ID</td>
+              <td>{{ url.id }}</td>
+            </tr>
+            <tr>
+              <td>Имя</td>
+              <td>{{ url.name }}</td>
+            </tr>
+            <tr>
+              <td>Дата создания</td>
+              <td>{{  url.created_at }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-    </main>
-    <footer class="border-top py-3 mt-5 flex-shrink-0">
-      <div class="container-lg">
-        <div class="text-center">
-          <a href="https://github.com/karanice/python-project-83" target="_blank">GitHub</a>
-        </div>
+      <h2 class="mt-5 mb-3">Проверки</h2>
+      <form method="post" action="{{ url_for('create_check', id=url.id) }}">
+        <input type="submit" class="btn btn-primary" value="Запустить проверку">
+      </form>
+      <div>
+        <table class="table table-bordered table-hover mt-2" data-test="checks">
+          <tbody>
+            <tr>
+              <th>ID</th>
+              <th>Код ответа</th>
+              <th>h1</th>
+              <th>title</th>
+              <th>description</th>
+              <th>Дата создания</th>
+            </tr>
+            {% if checks %}
+              {% for check in checks%}
+                <tr>
+                  <td>{{ check.id }}</td>
+                  <td>{{ check.status_code }}</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>{{ check.created_at }}</td>
+                </tr>
+              {% endfor %}
+            {% endif %}
+          </tbody>
+        </table>
       </div>
-    </footer>
-  </body>
-</html>
+    </div>
+  </main>
+{% endblock %}
