--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -1,58 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Анализатор страниц</title>
-  </head>
-  <body class="min-vh-100 d-flex flex-column">
-    <header class="flex-shrink-0">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-        <a class="navbar-brand" href="/">Анализатор страниц</a>
-        <div id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link " href="/urls">Сайты</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main class="flex-grow-1">
-      <div class="container-lg mt-3">
-        <h1>Сайты</h1>
-        <div class="table-responsive">
-          <table class="table table-bordered table-hover text-nowrap" data-test="urls">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Имя</th>
-                <th>Последняя проверка</th>
-                <th>Код ответа</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for url in urls %}
-              <tr>
-                <td>{{ url.id }}</td>
-                <td>
-                  <a href = "{{ url_for('urls_show', id=url.id) }}">{{ url.name }}</a></td>
-                <td>{{ url.last_check }}</td>
-                <td></td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
+{% extends 'layout.html' %}
+ 
+{% block content %}
+  <main class="flex-grow-1">
+    <div class="container-lg mt-3">
+      <h1>Сайты</h1>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover text-nowrap" data-test="urls">
+          <tbody>
+            <tr>
+              <th>ID</th>
+              <th>Имя</th>
+              <th>Последняя проверка</th>
+              <th>Код ответа</th>
+            </tr>
+            {% for url in urls %}
+            <tr>
+              <td>{{ url.id }}</td>
+              <td>
+                <a href = "{{ url_for('urls_show', id=url.id) }}">{{ url.name }}</a></td>
+              <td>{{ url.last_check }}</td>
+              <td>{{ url.status_code }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
-    </main>
-    <footer class="border-top py-3 mt-5 flex-shrink-0">
-      <div class="container-lg">
-        <div class="text-center">
-          <a href="https://github.com/karanice/python-project-83" target="_blank">GitHub</a>
-        </div>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+    </div>
+  </main>
+{% endblock %}
